# FSMConfig

./: .clang-tidy  .clang-uml  .cppcheck  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  DOCKER.md  Dockerfile  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  linters.yml
cmake/: Findyaml-cpp.cmake  fsmconfig-config.cmake.in
docs/: api_reference.md  architecture.md  examples.md  uml-diagrams.md
docs/architecture/decisions/: adr-001-documentation-workflow.md  adr-002-versioning-strategy.md
docs/development/: architect-workflow.md  clang-tidy-guide.md  coding-standards.md  critical-approach.md  task-strategy.md  workflow.md
docs/diagrams/: fsmconfig_callback_registry.mmd  fsmconfig_config_parser.mmd  fsmconfig_event_dispatcher.mmd  fsmconfig_include_diagram.mmd  fsmconfig_main_class.mmd  fsmconfig_state_machine.mmd  fsmconfig_variable_manager.mmd
docs/technologies/: tech-stack.md
examples/: CMakeLists.txt
examples/game_state/: config.yaml  main.cpp
examples/network_protocol/: config.yaml  main.cpp
examples/simple_fsm/: config.yaml  main.cpp
include/fsmconfig/: callback_registry.hpp  config_parser.hpp  event_dispatcher.hpp  state.hpp  state_machine.hpp  types.hpp  variable_manager.hpp  version.hpp.in
src/: CMakeLists.txt
src/fsmconfig/: callback_registry.cpp  config_parser.cpp  event_dispatcher.cpp  state.cpp  state_machine.cpp  types.cpp  variable_manager.cpp
tests/: CMakeLists.txt  test_callback_registry.cpp  test_config_parser.cpp  test_event_dispatcher.cpp  test_integration.cpp  test_state.cpp  test_state_machine.cpp  test_types.cpp  test_variable_manager.cpp
